--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -720,7 +720,7 @@
                                                             <rect key="frame" x="1" y="1" width="248" height="158"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <collectionView selectable="YES" id="53q-Pc-ZVo">
+                                                                <collectionView selectable="YES" id="53q-Pc-ZVo" customClass="LibraryView">
                                                                     <rect key="frame" x="0.0" y="0.0" width="248" height="158"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
