add some constraints

--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -837,21 +837,25 @@
                 <outlet property="view" destination="9Nu-LJ-3Af" id="PvT-kj-tt6"/>
             </connections>
         </collectionViewItem>
-        <box autoresizesSubviews="NO" transparent="YES" boxType="custom" borderType="none" id="9Nu-LJ-3Af">
+        <box autoresizesSubviews="NO" transparent="YES" boxType="custom" borderType="none" id="9Nu-LJ-3Af" customClass="LibraryItem">
             <rect key="frame" x="0.0" y="0.0" width="171" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <view key="contentView">
                 <rect key="frame" x="0.0" y="0.0" width="171" height="64"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QEY-m8-IvW">
-                        <rect key="frame" x="8" y="2" width="59" height="59"/>
+                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QEY-m8-IvW">
+                        <rect key="frame" x="56" y="2" width="59" height="59"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="53" id="9Vy-Vu-9gl"/>
+                            <constraint firstAttribute="width" constant="53" id="S94-gd-Urx"/>
+                        </constraints>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="photo" id="Mtg-eZ-xms"/>
                         <connections>
                             <binding destination="vBT-rm-Cna" name="value" keyPath="representedObject.image" id="htd-km-Vzd"/>
                         </connections>
                     </imageView>
-                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="st4-zo-9L7">
+                    <textField hidden="YES" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="st4-zo-9L7">
                         <rect key="frame" x="70" y="3" width="103" height="61"/>
                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Multiline Label" id="N02-oI-rIY">
                             <font key="font" metaFont="smallSystem"/>
@@ -864,6 +868,10 @@
                     </textField>
                 </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="centerY" secondItem="QEY-m8-IvW" secondAttribute="centerY" id="BnI-YX-pNJ"/>
+                <constraint firstAttribute="centerX" secondItem="QEY-m8-IvW" secondAttribute="centerX" id="Q9M-ij-Ue7"/>
+            </constraints>
             <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
             <color key="fillColor" name="selectedControlColor" catalog="System" colorSpace="catalog"/>
             <connections>
@@ -873,7 +881,7 @@
                     </dictionary>
                 </binding>
             </connections>
-            <point key="canvasLocation" x="488.5" y="866.5"/>
+            <point key="canvasLocation" x="488.5" y="866"/>
         </box>
     </objects>
     <resources>
