--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -840,7 +840,6 @@
                 <outlet property="window" destination="371" id="532"/>
             </connections>
         </customObject>
-        <customObject id="420" customClass="NSFontManager"/>
         <treeController childrenKeyPath="children" leafKeyPath="isLeaf" id="IEK-xe-ugr" userLabel="Attributes Tree Controller"/>
         <treeController childrenKeyPath="children" leafKeyPath="isLeaf" id="FfK-Wg-7Xj" userLabel="Navigator Tree Controller"/>
         <arrayController id="ybe-5J-ot9" userLabel="Library Array Controller"/>
@@ -856,7 +855,7 @@
                 <rect key="frame" x="1" y="1" width="169" height="61"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QEY-m8-IvW">
+                    <imageView hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QEY-m8-IvW">
                         <rect key="frame" x="56" y="3" width="56" height="56"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="9Vy-Vu-9gl"/>
@@ -867,9 +866,20 @@
                             <binding destination="vBT-rm-Cna" name="value" keyPath="representedObject.image" id="htd-km-Vzd"/>
                         </connections>
                     </imageView>
-                    <textField hidden="YES" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="st4-zo-9L7">
-                        <rect key="frame" x="70" y="0.0" width="103" height="61"/>
-                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Multiline Label" id="N02-oI-rIY">
+                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y7W-ub-Px8">
+                        <rect key="frame" x="2" y="2" width="56" height="56"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="FG5-75-Kne"/>
+                            <constraint firstAttribute="width" constant="50" id="ODG-Wa-QI0"/>
+                        </constraints>
+                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="photo" id="y4J-Gd-dCF"/>
+                        <connections>
+                            <binding destination="vBT-rm-Cna" name="value" keyPath="representedObject.image" id="Yqg-lf-WJA"/>
+                        </connections>
+                    </imageView>
+                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="st4-zo-9L7">
+                        <rect key="frame" x="61" y="5" width="105" height="50"/>
+                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Multiline Label" id="N02-oI-rIY" customClass="VerticallyCenteredTextFieldCell">
                             <font key="font" metaFont="smallSystem"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -881,8 +891,14 @@
                 </subviews>
             </view>
             <constraints>
+                <constraint firstItem="st4-zo-9L7" firstAttribute="bottom" secondItem="y7W-ub-Px8" secondAttribute="bottom" id="8Uh-Ml-axr"/>
                 <constraint firstAttribute="centerY" secondItem="QEY-m8-IvW" secondAttribute="centerY" id="BnI-YX-pNJ"/>
+                <constraint firstAttribute="trailing" secondItem="st4-zo-9L7" secondAttribute="trailing" constant="6" id="Oyy-6p-z9Q"/>
                 <constraint firstAttribute="centerX" secondItem="QEY-m8-IvW" secondAttribute="centerX" constant="1" id="Q9M-ij-Ue7"/>
+                <constraint firstAttribute="centerY" secondItem="y7W-ub-Px8" secondAttribute="centerY" id="WAY-M7-vBj"/>
+                <constraint firstItem="st4-zo-9L7" firstAttribute="leading" secondItem="y7W-ub-Px8" secondAttribute="trailing" constant="8" id="Wbc-n3-J4L"/>
+                <constraint firstItem="y7W-ub-Px8" firstAttribute="leading" secondItem="9Nu-LJ-3Af" secondAttribute="leading" constant="6" id="ehU-qf-JcU"/>
+                <constraint firstItem="st4-zo-9L7" firstAttribute="top" secondItem="y7W-ub-Px8" secondAttribute="top" id="o4i-Zj-6GR"/>
             </constraints>
             <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
             <color key="fillColor" name="selectedControlColor" catalog="System" colorSpace="catalog"/>
@@ -893,7 +909,7 @@
                     </dictionary>
                 </binding>
             </connections>
-            <point key="canvasLocation" x="488.5" y="866"/>
+            <point key="canvasLocation" x="488.5" y="865.5"/>
         </box>
     </objects>
     <resources>
