--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -715,7 +715,7 @@
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <subviews>
                                                     <scrollView autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0kB-Zw-fjX">
-                                                        <rect key="frame" x="0.0" y="47" width="260" height="153"/>
+                                                        <rect key="frame" x="0.0" y="26" width="260" height="174"/>
                                                         <clipView key="contentView" id="dys-lA-lM4">
                                                             <rect key="frame" x="1" y="1" width="248" height="158"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -741,8 +741,18 @@
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </scroller>
                                                     </scrollView>
+                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oSp-qF-DyS">
+                                                        <rect key="frame" x="5" y="5" width="19" height="17"/>
+                                                        <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="LibraryListMode" imagePosition="only" alignment="center" alternateImage="LibraryIconsMode" controlSize="small" inset="2" id="g5q-68-Omu">
+                                                            <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                                                            <font key="font" metaFont="systemBold" size="12"/>
+                                                        </buttonCell>
+                                                        <connections>
+                                                            <action selector="libraryModeAction:" target="494" id="zZK-Px-cQF"/>
+                                                        </connections>
+                                                    </button>
                                                     <searchField wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JOl-ek-8VA">
-                                                        <rect key="frame" x="80" y="20" width="160" height="19"/>
+                                                        <rect key="frame" x="28" y="4" width="228" height="19"/>
                                                         <searchFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" bezelStyle="round" id="eab-SF-2Gw">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -756,28 +766,18 @@
                                                             </connections>
                                                         </searchFieldCell>
                                                     </searchField>
-                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oSp-qF-DyS">
-                                                        <rect key="frame" x="15" y="14" width="62" height="28"/>
-                                                        <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="g5q-68-Omu">
-                                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                                            <font key="font" metaFont="smallSystem"/>
-                                                        </buttonCell>
-                                                        <connections>
-                                                            <action selector="libraryModeAction:" target="494" id="zZK-Px-cQF"/>
-                                                        </connections>
-                                                    </button>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="JOl-ek-8VA" secondAttribute="trailing" constant="20" id="3qj-15-yBc"/>
+                                                    <constraint firstAttribute="trailing" secondItem="JOl-ek-8VA" secondAttribute="trailing" constant="4" id="3qj-15-yBc"/>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="74F-PN-nRU"/>
                                                     <constraint firstAttribute="trailing" secondItem="0kB-Zw-fjX" secondAttribute="trailing" id="HfU-xc-AR9"/>
                                                     <constraint firstItem="0kB-Zw-fjX" firstAttribute="leading" secondItem="REE-3d-rnp" secondAttribute="leading" id="Z71-P9-xcV"/>
-                                                    <constraint firstAttribute="bottom" secondItem="JOl-ek-8VA" secondAttribute="bottom" constant="20" id="Z9V-g6-Kbo"/>
-                                                    <constraint firstItem="oSp-qF-DyS" firstAttribute="leading" secondItem="REE-3d-rnp" secondAttribute="leading" constant="20" id="bZ9-4e-Bvh"/>
-                                                    <constraint firstAttribute="bottom" secondItem="oSp-qF-DyS" secondAttribute="bottom" constant="20" id="hx9-4g-XRd"/>
+                                                    <constraint firstAttribute="bottom" secondItem="JOl-ek-8VA" secondAttribute="bottom" constant="4" id="Z9V-g6-Kbo"/>
+                                                    <constraint firstItem="oSp-qF-DyS" firstAttribute="leading" secondItem="REE-3d-rnp" secondAttribute="leading" constant="5" id="bZ9-4e-Bvh"/>
+                                                    <constraint firstAttribute="bottom" secondItem="oSp-qF-DyS" secondAttribute="bottom" constant="5" id="hx9-4g-XRd"/>
                                                     <constraint firstItem="0kB-Zw-fjX" firstAttribute="top" secondItem="REE-3d-rnp" secondAttribute="top" id="kJp-9I-0eZ"/>
-                                                    <constraint firstItem="JOl-ek-8VA" firstAttribute="top" secondItem="0kB-Zw-fjX" secondAttribute="bottom" constant="8" id="nBC-cp-lP5"/>
-                                                    <constraint firstItem="JOl-ek-8VA" firstAttribute="leading" secondItem="oSp-qF-DyS" secondAttribute="trailing" constant="8" id="w7q-Jv-9U3"/>
+                                                    <constraint firstItem="JOl-ek-8VA" firstAttribute="top" secondItem="0kB-Zw-fjX" secondAttribute="bottom" constant="3" id="nBC-cp-lP5"/>
+                                                    <constraint firstItem="JOl-ek-8VA" firstAttribute="leading" secondItem="oSp-qF-DyS" secondAttribute="trailing" constant="4" id="w7q-Jv-9U3"/>
                                                 </constraints>
                                             </customView>
                                         </subviews>
@@ -863,8 +863,8 @@
                         </constraints>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="photo" id="Mtg-eZ-xms"/>
                         <connections>
-                            <binding destination="vBT-rm-Cna" name="hidden" keyPath="representedObject.showLabel" id="DdP-w5-nyn"/>
                             <binding destination="vBT-rm-Cna" name="value" keyPath="representedObject.image" id="htd-km-Vzd"/>
+                            <binding destination="vBT-rm-Cna" name="hidden" keyPath="representedObject.showLabel" id="DdP-w5-nyn"/>
                         </connections>
                     </imageView>
                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y7W-ub-Px8">
@@ -875,12 +875,12 @@
                         </constraints>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="photo" id="y4J-Gd-dCF"/>
                         <connections>
+                            <binding destination="vBT-rm-Cna" name="value" keyPath="representedObject.image" id="Yqg-lf-WJA"/>
                             <binding destination="vBT-rm-Cna" name="hidden" keyPath="representedObject.showLabel" id="YMx-Gi-cdr">
                                 <dictionary key="options">
                                     <string key="NSValueTransformerName">NSNegateBoolean</string>
                                 </dictionary>
                             </binding>
-                            <binding destination="vBT-rm-Cna" name="value" keyPath="representedObject.image" id="Yqg-lf-WJA"/>
                         </connections>
                     </imageView>
                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="st4-zo-9L7">
@@ -891,12 +891,12 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                         <connections>
+                            <binding destination="vBT-rm-Cna" name="value" keyPath="representedObject.label" id="ejy-OS-KFg"/>
                             <binding destination="vBT-rm-Cna" name="hidden" keyPath="representedObject.showLabel" id="Juk-6R-hEA">
                                 <dictionary key="options">
                                     <string key="NSValueTransformerName">NSNegateBoolean</string>
                                 </dictionary>
                             </binding>
-                            <binding destination="vBT-rm-Cna" name="value" keyPath="representedObject.label" id="ejy-OS-KFg"/>
                         </connections>
                     </textField>
                 </subviews>
@@ -924,6 +924,8 @@
         </box>
     </objects>
     <resources>
+        <image name="LibraryIconsMode" width="19" height="19"/>
+        <image name="LibraryListMode" width="19" height="19"/>
         <image name="NSActionTemplate" width="14" height="14"/>
     </resources>
 </document>
